--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,25 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+<section class="products-index"
+
+  <header class="page-header">
+    <h1>Admin::Dashboard#show</h1>
+  </header>
+    <table class="table table-bordered">
+      <tr>
+        <td>&nbsp;</td>
+        <td>Count</td>
+      </tr>
+      <tr>
+        <td>Products</td>
+        <td><%= @products_count %> </td>
+      </tr>
+      <tr>
+        <td>Categories</td>
+        <td><%= @categories_count %></td>
+      </tr>
+      <tr>
+        <td>Orders</td>
+        <td><%= @orders_count %></td>
+      </tr>
+    </table>
+</section>
