--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,5 +1,5 @@
 
-<section class="products-index"
+<section class="dashboard-index"
 
   <header class="page-header">
     <h1>Admin::Dashboard#show</h1>
