Adjust header text

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -2,7 +2,7 @@
 <section class="dashboard-index"
 
   <header class="page-header">
-    <h1>Admin::Dashboard#show</h1>
+    <h1>Admin » Dashboard</h1>
   </header>
     <table class="table table-bordered">
       <tr>
