--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,7 @@
-
-
-
 <section class="admin-products-new">
 
   <header class="page-header">
-  <h1>User Registration</h1>
+  <h1>User » Registration</h1>
   </header>
 
   <div class="row">
