--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<section class="admin-products-new">
+<section class="user-products-new">
 
   <header class="page-header">
   <h1>User » Registration</h1>
